# pytorch_mlflow_sample

./: README.md  image_extrator.py  main.py  mlflow.db  pyproject.toml  terraform.tfstate  test.py  test_line_notify.py  train.py
config/: params.yaml
entity/: params.py
mlruns/0/: meta.yaml
mlruns/0/0882090116b7496e9e5fb192fdb5a93f/: meta.yaml
mlruns/0/0882090116b7496e9e5fb192fdb5a93f/tags/: mlflow.runName
mlruns/0/4afd778ea65e409ab21f3a612768f26a/: meta.yaml
mlruns/0/4afd778ea65e409ab21f3a612768f26a/tags/: mlflow.runName
mlruns/0/613b809975034015b41d9dacae3932f4/: meta.yaml
mlruns/0/613b809975034015b41d9dacae3932f4/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/0/65e45c9617db46d39c80fbbdfac26072/: meta.yaml
mlruns/0/65e45c9617db46d39c80fbbdfac26072/tags/: mlflow.runName
mlruns/0/bff0215c8af94b9bb353a9a612a66990/: meta.yaml
mlruns/0/bff0215c8af94b9bb353a9a612a66990/tags/: mlflow.runName
mlruns/0/e07ca039fe1e48939d5050b009f4023c/: meta.yaml
mlruns/0/e07ca039fe1e48939d5050b009f4023c/tags/: mlflow.runName
src/: train.py
src/extensions/: line.py
src/models/: simple_cnn.py
src/pytorch_mlflow_sample/: __init__.py
utils/: get_metrics.py  load_yaml.py
