[project]
name = "pytorch-mlflow-sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "O01o", email = "77559448+O01o@users.noreply.github.com" }
]
dependencies = [
    "torch>=2.5.1",
    "numpy>=2.2.1",
    "boto3>=1.35.97",
    "mlflow>=2.19.0",
    "typer>=0.15.1",
    "pydantic>=2.10.5",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.14.1",
    "ruff>=0.9.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pytorch_mlflow_sample"]
